# pydantic-encryption

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/rules/: sqlalchemy.md
.agents/settings/: codex.json
.claude/rules/: sqlalchemy.md
.codex/: config.toml
.cursor/rules/: sqlalchemy.mdc
.github/scripts/: code_review.py
.github/workflows/: publish-to-pypi.yml  run_tests.yml
pydantic_encryption/: __init__.py  annotations.py  blind_index.py  config.py  lazy.py  normalization.py  test_utils.py  types.py
pydantic_encryption/adapters/: __init__.py  base.py  registry.py
pydantic_encryption/integrations/: __init__.py  sqlalchemy.py
pydantic_encryption/lib/: __init__.py  imports.py
pydantic_encryption/models/: __init__.py  base.py  encryption.py  secure_model.py  string.py
pydantic_secure/: __init__.py  _lazy.py  config.py
pydantic_secure/adapters/: __init__.py  base.py  registry.py
pydantic_secure/integrations/: __init__.py
pydantic_secure/models/: __init__.py  base.py
tests/: conftest.py  docker-compose.yml  factories.py  test_basic.py  test_encryption.py  test_hashing.py  test_utils.py
tests/integration/: conftest.py  test_async_sqlalchemy.py  test_sqlalchemy.py
tests/mocks/: mock_encryption.py  mock_secure_model.py  mock_users.py
tests/models/: __init__.py  users.py
tests/unit/: test_adapters.py  test_async_adapters.py  test_async_models.py  test_aws_adapter.py  test_aws_caching.py  test_blind_index.py  test_blind_index_annotation.py  test_config.py  test_encryption.py  test_hashing.py  test_make_blind_index.py  test_models.py  (+5 more)
(+57 files in other folders)
