[project]
name = "pydantic_encryption"
version = "0.12.0"
description = "Encryption, hashing, and blind indexing for Pydantic"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pydantic-super-model>=2.0.0",
    "cryptography>=49.0.0",
    "argon2-cffi>=25.1.0",
]

[project.urls]
Repository = "https://github.com/julien777z/pydantic-encryption"

[project.optional-dependencies]
aws = [
    "boto3>=1.40.46",
    "aioboto3>=15.5.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.51",
]
all = [
    "boto3>=1.40.46",
    "aioboto3>=15.5.0",
    "sqlalchemy>=2.0.51",
]
dev = [
    "pytest>=9.1.1",
    "coverage>=7.15.0",
    "pytest-env>=1.1.5",
    "pytest-docker>=3.2.5",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-sqlalchemy>=0.3.0",
    "sqlalchemy-utils>=0.42.1",
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
    "polyfactory>=3.3.0",
]

[tool.black]
line-length = 110
target-version = ["py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 110

[project.scripts]
tests = "scripts.run_tests:main"

[tool.poetry]
packages = [
    {include = "pydantic_encryption"},
    {include = "scripts"},
]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
